// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BillingCycleSettingsModal when operation is \`$operation.callable\` renders appropriate modal content 1`] = `
.c0 {
  position: relative;
}

.c0,
.c0 > div,
.c0 > form,
.c0 > div > form,
 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: auto;
}

<div>
  <div
    class="Picasso-root"
  >
    <div
      _css2="position:relative;,&,& > div,& > form,& > div > form,{display:flex;flex-direction:column;overflow:auto;}"
      class="LoaderOverlay___StyledContainer-sc-1b017ii c0"
      data-testid="LoaderOverlayWrapper"
    >
      <div
        data-testid="AlertModal"
      >
        {"message":"This action is not available.","title":"Update Billing Cycle Settings"}
      </div>
    </div>
  </div>
</div>
`;

exports[`BillingCycleSettingsModal when operation is \`$operation.callable\` renders appropriate modal content 2`] = `
.c0 {
  position: relative;
}

<div>
  <div
    class="Picasso-root"
  >
    <div
      _css2="position:relative;,false"
      class="LoaderOverlay___StyledContainer-sc-1b017ii c0"
      data-testid="LoaderOverlayWrapper"
    >
      <div
        data-testid="AlertModal"
      >
        {"message":"Reason for operation being disabled","title":"Update Billing Cycle Settings"}
      </div>
    </div>
  </div>
</div>
`;

exports[`BillingCycleSettingsModal when operation is \`$operation.callable\` renders appropriate modal content 3`] = `
.c0 {
  position: relative;
}

<div>
  <div
    class="Picasso-root"
  >
    <div
      _css2="position:relative;,false"
      class="LoaderOverlay___StyledContainer-sc-1b017ii c0"
      data-testid="LoaderOverlayWrapper"
    >
      <div
        data-testid="AlertModal"
      >
        {"message":"This action is not available.","title":"Update Billing Cycle Settings"}
      </div>
    </div>
  </div>
</div>
`;
